@@ -140,6 +140,11 @@ IN DEVELOPMENT
       than using a call to ``transaction_finished``, allowing the removal of
       the fixed list of versioned files per repository. (Robert Collins)
 
+    * ``VersionedFile.clone_text`` is deprecated. This performance optimisation
+      is no longer used - reading the content of a file that is undergoing a
+      file level merge to identical state on two branches is rare enough, and
+      not expensive enough to special case. (Robert Collins)
+
     * ``VersionedFile.create_empty`` is removed. This method presupposed a
       sensible mapping to a transport for individual files, but pack backed
       versioned files have no such mapping. (Robert Collins)
